--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section class="sec2">
             <div class="section-wrap">
                 <div class="main-title">
-                    <img src="./img/public/public_logo_02.png" alt="">
+                    <img src="./img/public/public_logo_02.png" alt="풀무원 로고 이미지">
                     <h2>바른먹거리로 사람과
                         지구의 건강한 내일을 만드는 기업입니다.</h2>
                 </div>
@@ -95,7 +95,7 @@
                 <div class="sec2-slider">
                     <div class="container">
                         <div class="img-wrap">
-                            <img class="img" src="./img/index/index_slideimg_01.png" alt="">
+                            <img class="img" src="./img/index/index_slideimg_01.png" alt="농작물 확대 이미지">
                             <span class="slide-text">
                                 <b>1. 식물성지향</b>
                                 <b>사람과 지구의 건강을 위해
@@ -104,7 +104,7 @@
                             </span>
                         </div>
                         <div class="img-wrap">
-                            <img class="img" src="./img/index/index_slideimg_02.png" alt="">
+                            <img class="img" src="./img/index/index_slideimg_02.png" alt="소 이미지">
                             <span class="slide-text">
                                 <b>2. 동물복지</b>
                                 <b>건강한 사육환경에서 생산하고
@@ -113,7 +113,7 @@
                             </span>
                         </div>
                         <div class="img-wrap">
-                            <img class="img" src="./img/index/index_slideimg_03.png" alt="">
+                            <img class="img" src="./img/index/index_slideimg_03.png" alt="농작물을 심는 아이 이미지">
                             <span class="slide-text">
                                 <b>3. 친환경 케어</b>
                                 <b>차별화된 디자인 푸드와
@@ -123,7 +123,7 @@
                             </span>
                         </div>
                         <div class="img-wrap">
-                            <img class="img" src="./img/index/index_slideimg_04.png" alt="">
+                            <img class="img" src="./img/index/index_slideimg_04.png" alt="숲 이미지">
                             <span class="slide-text">
                                 <b>4. 건강한 경험</b>
                                 <b>원료,제조,판매,폐기 등
@@ -226,7 +226,7 @@
         <section class="sec3">
             <div class="section-wrap">
                 <div class="main-title">
-                    <img src="./img/public/public_logo_02.png" alt="">
+                    <img src="./img/public/public_logo_02.png" alt="풀무원 로고">
                     <h2>우리의 일하는 방식이자,
                         무엇보다 우선되어야 할 가치를 소개합니다. </h2>
                 </div>
@@ -358,8 +358,8 @@
                             </div>
 
                             <div class="tab-charac-1">
-                                <img src="./img/index/index_tabcontcharac_01.png" alt="">
-                                <img src="./img/index/index_tabcontcharac_02.png" alt="">
+                                <img src="./img/index/index_tabcontcharac_01.png" alt="말풍선 이미지">
+                                <img src="./img/index/index_tabcontcharac_02.png" alt="풀무원 캐릭터-2 이미지">
                             </div>
                         </div>
 
@@ -372,7 +372,7 @@
                                     <div class="tab-box-cards">
                                         <!-- 앞면 -->
                                         <div class="tab-box-front">
-                                            <img src="./img/index/index_boxcontimg_01.png" alt="">
+                                            <img src="./img/index/index_boxcontimg_01.png" alt="화분 이미지">
                                             <b>Nutrition
                                                 Balance</b>
                                         </div>
@@ -389,7 +389,7 @@
                                     <div class="tab-box-cards">
                                         <!-- 앞면 -->
                                         <div class="tab-box-front">
-                                            <img src="./img/index/index_boxcontimg_02.png" alt="">
+                                            <img src="./img/index/index_boxcontimg_02.png" alt="지구본 이미지">
                                             <b>Clean
                                                 Label</b>
                                         </div>
@@ -405,7 +405,7 @@
                                     <div class="tab-box-cards">
                                         <!-- 앞면 -->
                                         <div class="tab-box-front">
-                                            <img src="./img/index/index_boxcontimg_03.png" alt="">
+                                            <img src="./img/index/index_boxcontimg_03.png" alt="클린라벨 뱃지 이미지">
                                             <b>Eco
                                                 Caring</b>
                                         </div>
@@ -431,7 +431,7 @@
                                     <a href="./food_campaign.html">
                                         <div>
                                             <b>어린이</b>
-                                            <img src="./img/index/index_tabcontimg_01.png" alt="">
+                                            <img src="./img/index/index_tabcontimg_01.png" alt="새싹 이미지">
                                             <b>어릴 적 입맛이
                                                 평생 건강이 됩니다.</b>
                                         </div>
@@ -439,7 +439,7 @@
                                     <a href="./food_campaign.html">
                                         <div>
                                             <b>성인</b>
-                                            <img src="./img/index/index_tabcontimg_02.png" alt="">
+                                            <img src="./img/index/index_tabcontimg_02.png" alt="꽃 이미지">
                                             <b>나와 지구를 위한
                                                 방법을 길러줍니다.</b>
                                         </div>
@@ -447,7 +447,7 @@
                                     <a href="./food_campaign.html">
                                         <div>
                                             <b>시니어</b>
-                                            <img src="./img/index/index_tabcontimg_03.png" alt="">
+                                            <img src="./img/index/index_tabcontimg_03.png" alt="나무 이미지">
                                             <b>건강한 삶에 대한
                                                 고민을 해결합니다.</b>
                                         </div>
@@ -459,15 +459,15 @@
                                 <button id="customPlayButton" class="btn btn-primary">
                                     <span>바른먹거리 송 재생하기</span>
                                     <div>
-                                        <img src="./img/index/index_tabcontsong_01.png" alt="">
+                                        <img src="./img/index/index_tabcontsong_01.png" alt="재생 아이콘">
                                     </div>
                                 </button>
                                 <b>아이들과 함께 이 노래를 들으며 바른먹거리를 실천할 수 있습니다.</b>
                             </div>
 
                             <div class="tab-charac-2">
-                                <img src="./img/index/index_tabcontcharac_03.png" alt="">
-                                <img src="./img/index/index_tabcontcharac_04.png" alt="">
+                                <img src="./img/index/index_tabcontcharac_03.png" alt="말풍선 이미지">
+                                <img src="./img/index/index_tabcontcharac_04.png" alt="풀무원 캐릭터-2 이미지">
                             </div>
                         </div>
 
@@ -482,7 +482,7 @@
         <section class="sec5">
             <div class="section-wrap">
                 <div class="main-title">
-                    <img src="./img/public/public_logo_02.png" alt="">
+                    <img src="./img/public/public_logo_02.png" alt="풀무원 로고">
                     <h2>풀무원 기업 & ESG 경영 뉴스를 소개합니다.</h2>
                 </div>
 
@@ -583,7 +583,7 @@
             <div class="section-wrap">
                 <div class="main-title">
                     <img src="./img/public/public_logo_02.png" alt="풀무원 로고 이미지">
-                    <h2>풀무원 멀티미디어 몰아보기</h2>
+                    <h2>풀무원 멀티미디어 모아보기</h2>
                 </div>
 
                 <div class="sec6-medias">
