--- a/sustainability_ons.html
+++ b/sustainability_ons.html
@@ -53,7 +53,7 @@
                     </h2>
                     <div class="sb-01">
                         <b>풀무원의 기업사회책임</b>
-                        <p>풀무원은 경제적 가치, 사회적 가치, 환경적 가치 창출을 우리의 기업사회책임으로 정의하고 있습니다.<br>
+                        <p>풀무원은 경제적 가치, 사회적 가치, 환경적 가치 창출을 우리의 기업사회책임으로 정의하고 있습니다.<br><br>
                             <span>이러한 기업사회책임을 다하기 위하여,<br>다음의 실천 지침을 성실히 이행할 것을 다짐합니다.</span></p>
                     </div>
                     <ul>
